--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "name": "dev-bitrielswap-periphery",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Periphery smart contract for Bitriel",
   "license": "GPL-2.0-or-later",
   "author": "hangleang",
-  "main": "truffle-config.js",
   "directories": {
     "test": "test"
   },
@@ -29,7 +28,8 @@
   "dependencies": {
     "@openzeppelin/contracts": "^3.4.1-solc-0.7-2",
     "@truffle/hdwallet-provider": "^1.4.1",
-    "dev-bitrielswap-core": "^1.0.1",
+    "@uniswap/v2-core": "^1.0.1",
+    "dev-bitrielswap-core": "^1.0.2",
     "dotenv": "^10.0.0"
   },
   "devDependencies": {
