--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dev-bitrielswap-periphery",
-  "version": "1.0.5",
+  "version": "1.1.0",
   "description": "Periphery smart contract for Bitriel",
   "license": "GPL-2.0-or-later",
   "author": "hangleang",
@@ -33,6 +33,7 @@
     "dotenv": "^10.0.0"
   },
   "devDependencies": {
+    "dev-bitrielswap-sdk": "^1.0.9",
     "truffle-contract-size": "^2.0.1",
     "truffle-plugin-verify": "^0.5.10"
   },
