--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,14 @@
 node_modules
-build
+exports
+types
 package-lock.json
 .env
 .DS_Store
+
+#Hardhat files
+cache
+artifacts
+abi
+coverage
+coverage.json
+deployments
