--- a/package.json
+++ b/package.json
@@ -1,11 +1,8 @@
 {
   "name": "@bitriel/bitrielswap-periphery",
-  "version": "1.0.3",
+  "version": "1.1.1",
   "description": "Periphery smart contract for Bitriel",
   "license": "GPL-2.0-or-later",
-  "directories": {
-    "test": "test"
-  },
   "keywords": [
     "bitrielswap",
     "periphery"
@@ -14,29 +11,51 @@
     "type": "git",
     "url": "https://github.com/bitriel/bitrielswap-periphery.git"
   },
-  "files": [
-    "contracts/base",
-    "contracts/interfaces",
-    "contracts/libraries",
-    "build/contracts/*.json"
-  ],
   "engines": {
     "node": ">=10"
   },
-  "dependencies": {
-    "@bitriel/bitrielswap-core": "^1.0.0",
-    "@openzeppelin/contracts": "^3.4.1-solc-0.7-2",
-    "@truffle/hdwallet-provider": "^1.4.1",
-    "@uniswap/v2-core": "^1.0.1",
-    "dotenv": "^10.0.0"
+  "files": [
+    "abi",
+    "artifacts/contracts/**/*.json",
+    "!artifacts/contracts/**/*.dbg.json",
+    "!artifacts/contracts/test/**/*",
+    "contracts",
+    "!contracts/test",
+    "types"
+  ],
+  "scripts": {
+    "compile": "hardhat compile",
+    "test": "hardhat test",
+    "clean": "hardhat clean",
+    "coverage": "RUN_COVERAGE=1 hardhat coverage"
   },
   "devDependencies": {
+    "@bitriel/bitrielswap-core": "^1.0.0",
     "@bitriel/bitrielswap-sdk": "^1.0.6",
-    "truffle-contract-size": "^2.0.1",
-    "truffle-plugin-verify": "^0.5.10"
-  },
-  "scripts": {
-    "compile": "truffle compile",
-    "test": "truffle test"
+    "@nomiclabs/hardhat-ethers": "npm:hardhat-deploy-ethers@^0.3.0-beta.10",
+    "@nomiclabs/hardhat-etherscan": "^2.1.4",
+    "@nomiclabs/hardhat-waffle": "^2.0.1",
+    "@openzeppelin/contracts": "^3.4.1-solc-0.7",
+    "@types/chai": "^4.2.21",
+    "@types/mocha": "^9.0.0",
+    "@types/node": "^16.7.8",
+    "@uniswap/v2-core": "^1.0.1",
+    "chai": "^4.3.4",
+    "dotenv": "^10.0.0",
+    "ethereum-waffle": "^3.4.0",
+    "ethers": "^5.4.4",
+    "hardhat": "^2.6.0",
+    "hardhat-abi-exporter": "^2.2.1",
+    "hardhat-contract-sizer": "^2.0.3",
+    "hardhat-deploy": "^0.8.11",
+    "hardhat-gas-reporter": "^1.0.4",
+    "hardhat-spdx-license-identifier": "^2.0.3",
+    "hardhat-typechain": "^0.3.5",
+    "hardhat-watcher": "^2.1.1",
+    "mocha-chai-jest-snapshot": "^1.1.3",
+    "solidity-coverage": "^0.7.16",
+    "ts-node": "^10.2.1",
+    "typechain-target-ethers-v5": "^5.0.1",
+    "typescript": "^4.4.2"
   }
 }
