--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@bitriel/bitrielswap-periphery",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "description": "Periphery smart contract for Bitriel",
-  "license": "GPL-2.0-or-later",
+  "license": "MIT",
   "keywords": [
     "bitrielswap",
     "periphery"
@@ -15,7 +15,6 @@
     "node": ">=10"
   },
   "files": [
-    "abi",
     "artifacts/contracts/**/*.json",
     "!artifacts/contracts/**/*.dbg.json",
     "!artifacts/contracts/test/**/*",
@@ -31,7 +30,7 @@
   },
   "devDependencies": {
     "@bitriel/bitrielswap-core": "^1.0.0",
-    "@bitriel/bitrielswap-sdk": "^1.0.6",
+    "@bitriel/bitrielswap-sdk": "^1.1.0",
     "@nomiclabs/hardhat-ethers": "npm:hardhat-deploy-ethers@^0.3.0-beta.10",
     "@nomiclabs/hardhat-etherscan": "^2.1.4",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
@@ -45,13 +44,10 @@
     "ethereum-waffle": "^3.4.0",
     "ethers": "^5.4.4",
     "hardhat": "^2.6.0",
-    "hardhat-abi-exporter": "^2.2.1",
     "hardhat-contract-sizer": "^2.0.3",
     "hardhat-deploy": "^0.8.11",
     "hardhat-gas-reporter": "^1.0.4",
-    "hardhat-spdx-license-identifier": "^2.0.3",
     "hardhat-typechain": "^0.3.5",
-    "hardhat-watcher": "^2.1.1",
     "mocha-chai-jest-snapshot": "^1.1.3",
     "solidity-coverage": "^0.7.16",
     "ts-node": "^10.2.1",
