--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bitriel/bitrielswap-periphery",
-  "version": "1.1.7",
+  "version": "1.1.8",
   "description": "Periphery smart contract for Bitriel",
   "license": "MIT",
   "keywords": [
@@ -24,13 +24,14 @@
   ],
   "scripts": {
     "compile": "hardhat compile",
+    "deploy": "hardhat deploy --reset",
     "test": "hardhat test",
     "clean": "hardhat clean",
     "coverage": "RUN_COVERAGE=1 hardhat coverage"
   },
   "devDependencies": {
-    "@bitriel/bitrielswap-core": "^1.0.0",
-    "@bitriel/bitrielswap-sdk": "^1.2.1",
+    "@bitriel/bitrielswap-core": "^1.0.1",
+    "@bitriel/bitrielswap-sdk": "^1.2.3",
     "@nomiclabs/hardhat-ethers": "npm:hardhat-deploy-ethers@^0.3.0-beta.10",
     "@nomiclabs/hardhat-etherscan": "^2.1.4",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
