--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,6 @@
 COINMARKETCAP_API_KEY=
-ETHERSCAN_API_KEY=
-BSCSCAN_API_KEY=
+ETH_API_KEY=
+BSC_API_KEY=
 INFURA_API_KEY=
 PRIVATE_KEY=
 REPORT_GAS=false
-TS_NODE_TRANSPILE_ONLY=1
