--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bitriel/bitrielswap-periphery",
-  "version": "1.1.10",
+  "version": "1.1.11",
   "description": "Periphery smart contract for Bitriel",
   "license": "MIT",
   "keywords": [
@@ -15,6 +15,7 @@
     "node": ">=10"
   },
   "files": [
+    "build/contracts/*.json",
     "artifacts/contracts/**/*.json",
     "!artifacts/contracts/**/*.dbg.json",
     "!artifacts/contracts/test/**/*",
@@ -30,11 +31,12 @@
   },
   "devDependencies": {
     "@bitriel/bitrielswap-core": "^1.0.1",
-    "@bitriel/bitrielswap-sdk": "^1.3.5",
+    "@bitriel/bitrielswap-sdk": "^1.3.15",
     "@nomiclabs/hardhat-ethers": "npm:hardhat-deploy-ethers@^0.3.0-beta.10",
     "@nomiclabs/hardhat-etherscan": "^2.1.4",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
     "@openzeppelin/contracts": "^3.4.1-solc-0.7",
+    "@truffle/hdwallet-provider": "^2.0.1",
     "@types/chai": "^4.2.21",
     "@types/mocha": "^9.0.0",
     "@types/node": "^16.7.8",
